@@ -1,3 +1,4 @@
+* Invert sign of budget amount
 
 Version 7.4.0 - 2024-11-04
 --------------------------
